@@ -1,4 +1,5 @@
 E: filenames: bad-menu-file-name usr/lib/menu/menu
+E: filenames: bad-menu-file-name usr/share/menu/menu
 E: filenames: lengthy-symlink usr/lib/filenames/symlink4wrong ../filenames/symlink2
 E: filenames: lengthy-symlink usr/share/doc/filenames/version.txt.gz ../filenames/doc/version6.txt.gz
 E: filenames: no-copyright-file
@@ -7,8 +8,8 @@ E: filenames: package-contains-ancient-file usr/lib/perl5/foo/ancient.pm 1975-01
 E: filenames: package-installs-file-to-usr-something-x11 usr/bin/X11/
 E: filenames: package-installs-file-to-usr-something-x11 usr/bin/X11/testxbin
 E: filenames: package-installs-packlist usr/lib/perl5/foo/.packlist
-E: filenames: postinst-does-not-call-updatemenus usr/lib/menu/menu
-E: filenames: postrm-does-not-call-updatemenus usr/lib/menu/menu
+E: filenames: postinst-does-not-call-updatemenus usr/share/menu/menu
+E: filenames: postrm-does-not-call-updatemenus usr/share/menu/menu
 E: filenames: symlink-contains-spurious-segments usr/lib/filenames/symlink5wrong ../menu/../somethingelse
 E: filenames: symlink-contains-spurious-segments usr/lib/filenames/symlink6wrong ./file4
 E: filenames: symlink-contains-spurious-segments usr/lib/filenames/symlink7wrong ../menu/./something
@@ -41,6 +42,7 @@ W: filenames: file-in-unusual-dir files/Maelstrom Sounce.r121
 W: filenames: file-in-unusual-dir files/Maelstrom Sound
 W: filenames: file-in-unusual-dir files/Maelstrom Sound.mine
 W: filenames: file-in-unusual-dir files/svn-commit.tmp
+W: filenames: menu-file-in-usr-lib usr/lib/menu/menu
 W: filenames: no-priority-field
 W: filenames: no-section-field
 W: filenames: non-standard-dir-perm usr/lib/filenames/readonly/ 0555 != 0755
